--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Kilonzo.deploy()</title>
+    <title>Kilonzo.run</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
