--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Kilonzo.run</title>
   </head>
   <body>
